--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
     <link
       rel="stylesheet"
-      href="https://unpkg.com/element-ui/lib/theme-chalk/index.css"
+      href="https://cdn.bootcdn.net/ajax/libs/element-ui/2.15.2/theme-chalk/index.min.css"
     />
   </head>
   <body>
@@ -25,7 +25,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vue-router@3.2.0/dist/vue-router.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vuex@3.4.0/dist/vuex.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios@0.21.1/dist/axios.min.js"></script>
-    <script src="https://unpkg.com/element-ui/lib/index.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/element-ui/2.15.2/index.min.js"></script>
     <% } %>
     <!-- built files will be auto injected -->
   </body>
