--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       href="https://cdn.bootcdn.net/ajax/libs/element-ui/2.15.2/theme-chalk/index.min.css"
     />
   </head>
-  <body>
+  <body style="overflow:hidden">
     <noscript>
       <strong
         >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
